--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ Jinja2==2.9.4
 MarkupSafe==0.23
 Werkzeug==0.11.15
 WTForms==2.1
+Flask-Migrate
+Flask-Script
+Flask-Login
+Flask-SQLAlchemy
+psycopg2
